# ai_test_harness

./: .gitignore  README.md  dashboard.html  pyproject.toml  run_tests.py
.claude/: settings.local.json
docs/: directives.md  source.json  v2todos.md
src/ai_test_harness/: __init__.py  cli.py  config.py  db.py  logging.py  models.py  runner.py
src/ai_test_harness/suites/: __init__.py  code.py  context.py  quantization.py  routing.py  tool_calls.py
tests/: conftest.py  test_db.py  test_models.py
