[build-system]
requires = ["hatchling>=1.21,<2"]
build-backend = "hatchling.build"

[project]
name = "ai-test-harness"
version = "0.1.0"
description = "Benchmark and evaluate local LLMs across routing, tool calls, context handling, quantization, and code generation."
requires-python = ">=3.11,<4"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.1,<3",
    "aiosqlite>=0.20,<1",
    "click>=8.1,<9",
    "rich>=13.7,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "coverage>=7.4,<8",
    "ruff>=0.3,<1",
]

[project.scripts]
harness = "ai_test_harness.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_test_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
